//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  address String [not null, default: '']
  phone String [not null, default: '']
  role Role [not null, default: 'USER']
  sessions sessions [not null]
  orders orders [not null]
}

Table sessions {
  id String [pk]
  userId String [not null]
  token String [not null]
  expires Int [not null]
  user users [not null]

  indexes {
    (userId, token) [unique]
  }
}

Table categories {
  id String [pk]
  name String [unique, not null]
  description String [not null, default: '']
  foodItems food_items [not null]
}

Table food_items {
  id String [pk]
  name String [not null]
  description String [not null, default: '']
  price Float [not null]
  imageUrl String [not null, default: '']
  cookingMethod String [not null]
  taste String[] [not null]
  size String [not null]
  origin String [not null]
  usageType String [not null]
  targetUsers String[] [not null]
  quantity Int [not null, default: 1]
  sold Int [not null, default: 0]
  categoryId String [not null]
  category categories [not null]
  orderItems order_items [not null]
}

Table orders {
  id String [pk]
  userId String [not null]
  status OrderStatus [not null, default: 'PENDING']
  appTransId String [unique, not null]
  totalAmount Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user users [not null]
  orderItems order_items [not null]
  deliveryStatus DeliveryStatus [not null, default: 'PENDING_DELIVERY']
  paymentStatus PaymentStatus [not null, default: 'PENDING_PAYMENT']
  deliveredAt DateTime
  paidAt DateTime
}

Table order_items {
  id String [pk]
  orderId String [not null]
  foodItemId String [not null]
  quantity Int [not null, default: 1]
  order orders [not null]
  foodItem food_items [not null]
}

Table billboards {
  id String [pk]
  name String [unique, not null]
  imageUrl String [not null]
}

Enum Role {
  USER
  ADMIN
}

Enum DeliveryStatus {
  PENDING_DELIVERY
  IN_TRANSIT
  DELIVERED
}

Enum PaymentStatus {
  PENDING_PAYMENT
  PAID
  FAILED
}

Enum OrderStatus {
  PENDING
  COMPLETED
  CANCELLED
}

Ref: sessions.userId > users.id

Ref: food_items.categoryId > categories.id

Ref: orders.userId > users.id

Ref: order_items.orderId > orders.id

Ref: order_items.foodItemId > food_items.id